protect-webapp-with-iap/k8s-manifest/gke-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-app
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "gke-backend-config"}'
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    name: gke-app
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: gke-app
  name: gke-app
spec:
  containers:
  - image: {cloud-run-image}
    name: gke-app
    ports:
    - containerPort: 80
